--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Bitfrost",
-  "name": "Bitfrost - Ridesharing",
+  "short_name": "Jack Toumey",
+  "name": "Jack Toumey - My Homepage",
   "icons": [
     {
       "src": "favicon.ico",
