--- a/.eslintrc
+++ b/.eslintrc
@@ -38,15 +38,7 @@
           "error",
           {
             "before": true,
-            "after": true,
-            "overrides": {
-                "do": { "after": false },
-                "for": { "after": false },
-                "if": { "after": false },
-                "switch": { "after": false },
-                "while": { "after": false },
-                "catch": { "after": false }
-            }
+            "after": true
           }
         ],
         "array-bracket-spacing": "error",
