--- a/package.json
+++ b/package.json
@@ -77,7 +77,13 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "dotenv-webpack": "^1.5.7",
+    "i": "^0.3.6",
+    "npm": "^6.5.0",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-helmet": "^5.2.0",
