--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-helmet": "^5.2.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
+    "react-typed": "^1.1.0",
     "redux": "^4.0.1",
     "styled-components": "^4.1.1"
   }
